[tool.poetry]
name = "todoist-export"
version = "0.1.0"
description = "An export tool for Todoist data"
authors = ["Anton Abdulgalimov <aabdulgalimov@proton.me>"]
readme = "README.md"
packages = [{ include = "todoist_export" }]

[tool.poetry.dependencies]
python = "^3.12"
todoist-api-python = "2.1.7"
keyring = "25.6.0"

[tool.poetry.scripts]
todoist_export = "todoist_export.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
